--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,97 @@
     <title>treehouse</title>
 </head>
 <body>
+    <header class="header">
+       <div class="container">
+            <div class="header__wrapper">
+                <div class="header__logo">
+                   <a href="#"> <img src="icons/logo.png" alt="logo"></a>
+                </div>
+                <div class="header__menu">
+                    <nav>
+                        <ul class="header__list">
+                            <li class="header__item"><a href="#" class="header__link">Home</a></li>
+                            <li class="header__item"><a href="#" class="header__link">About</a></li>
+                            <li class="header__item"><a href="#" class="header__link">Blog</a></li>
+                            <li class="header__item"><a href="#" class="header__link">Portfolio</a></li>
+                            <li class="header__item"><a href="#" class="header__link">Contact</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+       </div>
+    </header>
+    <section class="promo">
+       <div class="container">
+            <h1 class="promo__title">
+                Creative Digital <br>Solutions
+            </h1>
+            <h2 class="promo__subtitle">Proin iaculis purus consequat sem cure. </h2>
+            <button class="button button_big promo__button">View Portfolio</button>
+       </div>
+    </section>
+
+    <section class="services">
+        <div class="container">
+            <h2 class="services__title title">Professional Services</h2>
+            <div class="services__subtitle subtitle">Proin iaculis purus consequat sem cure </div>
+
+            <div class="services__wrapper">
+                <div class="services-block">
+                    <div class="services-block__img"><img src="icons/services/1.png" alt="1"></div>
+                    <div class="services-block__title">beautiful designs</div>
+                    <div class="services-block__descr">
+                        Proin iaculis purus consequat sem cure 
+                        digni ssim. Donec porttitora entum suscipit 
+                        aenean rhoncus posuere odio in tincidunt.
+                    </div>
+                </div>
+                <div class="services-block">
+                    <div class="services-block__img"><img src="icons/services/2.png" alt="2"></div>
+                    <div class="services-block__title">responsive web</div>
+                    <div class="services-block__descr">
+                        Proin iaculis purus consequat sem cure 
+                        digni ssim. Donec porttitora entum suscipit 
+                        aenean rhoncus posuere odio in tincidunt.
+                    </div>
+                </div>
+                <div class="services-block">
+                    <div class="services-block__img"><img src="icons/services/3.png" alt="3"></div>
+                    <div class="services-block__title">Marketing tools</div>
+                    <div class="services-block__descr">
+                        Proin iaculis purus consequat sem cure 
+                        digni ssim. Donec porttitora entum suscipit 
+                        aenean rhoncus posuere odio in tincidunt.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="relax">
+        
+            <div class="relax__wrapper">
+                <div class="relax__grey-block">
+                    <img src="icons/gear.png" alt="gear" class="relax__img">
+                </div>
+                <div class="relax__main-block">
+                        <h2 class="relax__title">
+                            Just relax <span>&</span><br> let us do the heavy lifting
+                        </h2>
+                        <div class="relax__subtitle">
+                            Proin iaculis purus consequat sem cure  digni ssim. Donec <br>
+                            porttitora entum suscipit  aenean rhoncus posuere odio in tincidunt.
+                        </div>
+                        <ul class="relax__list">
+                            <li class="relax__item">Initial Setup & Customizations</li>
+                            <li class="relax__item">Regular Updates</li>
+                            <li class="relax__item">Round The Clock Support</li>
+                        </ul>
+                        <button class="button button_small relax__button">Learn more</button>
+                </div>
+            </div>
+        
+    </section>
     <script src="js/script.js"></script>
 </body>
 </html>
