--- a/src/index.html
+++ b/src/index.html
@@ -120,5 +120,89 @@
         
     </section>
     <script src="js/script.js"></script>
+
+    <section class="project">
+        <div class="container">
+            <h2 class="project__title title">latest project</h2>
+            <div class="project__subtitle subtitle">Proin iaculis purus consequat sem cure </div>
+            <div class="project__header">
+                <div class="project__header-title">Developing a framework</div>
+                <div class="project__header-descr">
+                    Proin iaculis purus consequat sem cure  digni ssim 
+                    donec porttitora entum suscipit  aenean rhoncus posuere 
+                    odio in tincidunt.
+                </div>
+            </div>
+            <div class="project__wrapper">
+                <div class="project-block">
+                    <div class="project-block__img">
+                        <img src="icons/projects/1.png" alt="icon">
+                    </div>
+                    <div class="project-block__title">E-Commerce Ready</div>
+                    <div class="project-block__descr">Proin iaculis purus consequat sem cure  digni ssim. </div>
+                </div>
+                <div class="project-block">
+                    <div class="project-block__img">
+                        <img src="icons/projects/2.png" alt="icon">
+                    </div>
+                    <div class="project-block__title">Powerful SEO Features</div>
+                    <div class="project-block__descr">Proin iaculis purus consequat sem cure.</div>
+                </div>
+                <div class="project-block">
+                    <div class="project-block__img">
+                        <img src="icons/projects/3.png" alt="icon">
+                    </div>
+                    <div class="project-block__title">Secure Encryption</div>
+                    <div class="project-block__descr">Proin iaculis purus consequat sem cure iaculis purus.</div>
+                </div>
+            </div>
+            <div class="project__descr">
+                Proin iaculis purus consequat sem cure  digni ssim donec 
+                porttitora entum suscipit  aenean rhoncus posuere odio in.
+            </div>
+            <a href="#" class="project__link">View Details &rarr;</a>
+        </div>
+    </section>
+    <section class="culture">
+        <div class="container">
+            <h2 class="culture__title title">culture & Values</h2>
+            <div class="culture__subtitle subtitle">Proin iaculis purus consequat cure. </div>
+            <div class="culture__wrapper">
+                <div class="culture-block">
+                    <div class="culture-block__round">
+                        <img src="icons/culture/1.png" alt="culture_icon">
+                    </div>
+                    <div class="culture-block__title">Work-Life Balance</div>
+                    <div class="culture-block__descr">
+                        Proin iaculis purus consequat sem cure 
+                        digni ssim. Donec porttitora entum suscipit 
+                        aenean rhoncus posuere odio in tincidunt.
+                    </div>
+                </div>
+                <div class="culture-block">
+                    <div class="culture-block__round">
+                        <img src="icons/culture/2.png" alt="culture_icon">
+                    </div>
+                    <div class="culture-block__title">Quality Over Quantity</div>
+                    <div class="culture-block__descr">
+                        Proin iaculis purus consequat sem cure 
+                        digni ssim. Donec porttitora entum suscipit 
+                        aenean rhoncus posuere odio in tincidunt.
+                    </div>
+                </div>
+                <div class="culture-block">
+                    <div class="culture-block__round">
+                        <img src="icons/culture/3.png" alt="culture_icon">
+                    </div>
+                    <div class="culture-block__title">Deliver Excellence</div>
+                    <div class="culture-block__descr">
+                        Proin iaculis purus consequat sem cure 
+                        digni ssim. Donec porttitora entum suscipit 
+                        aenean rhoncus posuere odio in tincidunt.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
